examples/good/power.ypl
times(a): {
    return a * 2;
}

a=13;

main(x): {
    out(times(a));
}