examples/bad/funcMiss.ypl
main(): {
    a=2*3;
    a++;
    b=a;
    check(b);
}